Fixed issue of sidebar overlap
Added the z-index property to the .sideNav selector to ensure that the sidebar stays above other elements on the page when the mouse is hovered over it.

--- a/app/assets/stylesheets/components/side_nav.css.scss
+++ b/app/assets/stylesheets/components/side_nav.css.scss
@@ -8,6 +8,7 @@ $sideNav-spacing: 8px 15px;
 
 .sideNav {
 	background: $charcoal;
+	z-index: 9999;
 	height: 100%;
 	left: 0;
 	top: 0;
